added the initial orderBy logic and specs

--- a/specRunner.html
+++ b/specRunner.html
@@ -11,6 +11,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="whereSpec.js"></script>
   <script type="text/javascript" src="linkSpec.js"></script>
+  <script type="text/javascript" src="orderBySpec.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="where.js"></script>
